--- a/style.css
+++ b/style.css
@@ -1,4 +1,51 @@
-/* Add a new CSS rule to hide the header when the hide-header class is present on the body */
+.form-wrapper {
+  padding: 0rem 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.app-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  padding: 0rem 4rem;
+  min-height: 100vh;
+}
+
+.section-styling {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: #ffff;
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+.auth-form-style {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  background-color: white;
+  border-radius: 0.5rem;
+  padding: 2rem 4rem;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  background-color: white;
+  border-radius: 0.5rem;
+  padding: 2rem 4rem;
+}
+
 body.hide-header header {
   display: none;
 }
@@ -8,17 +55,18 @@ body.hide-header header {
   padding: 0.5rem;
 }
 
-h1 {
-  font-size: 2rem;
-  margin: 0;
-}
-
 .active {
   display: block;
 }
 
 .disabled {
   display: none;
+}
+
+.products-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .errors {
@@ -75,58 +123,269 @@ nav a {
   color: #fff;
 }
 
-.loading {
-  --speed-of-animation: 0.9s;
-  --gap: 6px;
-  --first-color: #4c86f9;
-  --second-color: #49a84c;
-  --third-color: #f6bb02;
-  --fourth-color: #f6bb02;
-  --fifth-color: #2196f3;
+.not-admin-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100px;
-  gap: 6px;
-  height: 100px;
 }
 
-.loading span {
-  width: 4px;
-  height: 50px;
-  background: var(--first-color);
-  animation: scale var(--speed-of-animation) ease-in-out infinite;
+.message-wrapper {
+  padding: 2rem;
+  border-radius: 0.5rem;
+  background-color: #fff;
 }
 
-.loading span:nth-child(2) {
-  background: var(--second-color);
-  animation-delay: -0.8s;
+.category-card {
+  padding: 0.5rem 2rem;
+  border-radius: 0.5rem;
+  background-color: #fff;
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 1px 0px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+
+  /* font */
+  font-size: 1rem;
+  font-weight: 600;
+  color: #333;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: space-between;
 }
 
-.loading span:nth-child(3) {
-  background: var(--third-color);
-  animation-delay: -0.7s;
+/* animated button  */
+.button {
+  cursor: pointer;
+  position: relative;
+  font-size: 1rem;
+  color: #333;
+  border: 1px solid #333;
+  border-radius: 0.5rem;
+  background-color: transparent;
+  font-weight: 400;
+  transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+  overflow: hidden;
+
+  width: 10rem;
+  height: 3rem;
 }
 
-.loading span:nth-child(4) {
-  background: var(--fourth-color);
-  animation-delay: -0.6s;
+.button::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  margin: auto;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 100%;
+  scale: 0;
+  z-index: -1;
+  background-color: #333;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
-.loading span:nth-child(5) {
-  background: var(--fifth-color);
-  animation-delay: -0.5s;
+.button:hover::before {
+  scale: 3;
 }
 
-@keyframes scale {
-  0%,
-  40%,
-  100% {
-    transform: scaleY(0.05);
-  }
+.button:hover {
+  color: #ffffff;
+  scale: 1;
+}
 
-  20% {
-    transform: scaleY(1);
+.button:active {
+  scale: 1;
+}
+
+/* styles or the delete button */
+.button-delete {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  background-color: #333;
+  border: none;
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition-duration: 0.3s;
+  overflow: hidden;
+  position: relative;
+  gap: 2px;
+}
+
+.svgIcon {
+  width: 0.8rem;
+  transition-duration: 0.3s;
+}
+
+.svgIcon path {
+  fill: white;
+}
+
+.button-delete:hover {
+  transition-duration: 0.3s;
+  background-color: rgb(255, 69, 69);
+  align-items: center;
+  gap: 0;
+}
+
+.bin-top {
+  transform-origin: bottom right;
+}
+.button-delete:hover .bin-top {
+  transition-duration: 0.3s;
+  transform: rotate(160deg);
+}
+
+/* products card for the admin and user */
+.card {
+  padding: 0.8rem;
+  background: #fff;
+  overflow: visible;
+  border-radius: 0.5rem;
+
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 1px 0px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+.card-img {
+  background-color: #ffcaa6;
+  height: 40%;
+  width: 100%;
+  border-radius: 0.5rem;
+  transition: 0.3s ease;
+}
+
+.card-info {
+  padding-top: 10%;
+}
+
+.svg-icon {
+  width: 20px;
+  height: 20px;
+}
+
+.card-footer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 10px;
+  border-top: 1px solid #ddd;
+}
+
+/*Text*/
+.text-title {
+  font-weight: 900;
+  font-size: 1.2em;
+  line-height: 1.5;
+}
+
+.text-body {
+  font-size: 0.9em;
+  padding-bottom: 10px;
+}
+
+/*Button*/
+.card-button {
+  border: 1px solid #252525;
+  display: flex;
+  padding: 0.3em;
+  cursor: pointer;
+  border-radius: 50px;
+  transition: 0.3s ease-in-out;
+}
+
+/*Hover*/
+.card-img:hover {
+  transform: translateY(-25%);
+  box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px,
+    rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
+}
+
+.card-button:hover {
+  border: 1px solid #ffcaa6;
+  background-color: #ffcaa6;
+}
+
+/* logout button  */
+.Btn {
+  display: flex;
+  align-items: center;
+  width: 2.5rem;
+  height: 2.5rem;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+  transition-duration: 0.5s;
+  background-color: rgb(255, 65, 65);
+}
+
+/* plus sign */
+.sign {
+  width: 100%;
+  transition-duration: 0.5s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sign svg {
+  width: 1rem;
+}
+
+.sign svg path {
+  fill: white;
+}
+
+/* button click effect*/
+.Btn:active {
+  transform: translate(2px, 2px);
+}
+
+/* update button styling */
+/* <reset-style> ============================ */
+a {
+  text-decoration: none;
+}
+/* <main-style> ============================ */
+.scroll-up {
+  /* position: fixed; */
+  right: 3rem;
+  bottom: -50%;
+  z-index: 10;
+  width: 32px;
+  height: 32px;
+  border-radius: 4px;
+  background-color: rgba(29, 29, 31, 0.7);
+  backdrop-filter: saturate(180%) blur(20px);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  transition: bottom 0.4s, transform 0.4s;
+}
+
+.scroll-up:hover {
+  transform: translateY(-0.25rem);
+}
+
+/* Show scroll-up */
+._show-scroll {
+  bottom: 3rem;
+}
+
+@media (max-width: 1199.98px) {
+  .scroll-up {
+    right: 1rem;
   }
 }
 
