--- a/style.css
+++ b/style.css
@@ -259,8 +259,7 @@ nav a {
   top: 0;
   margin: 0;
   opacity: 0;
-  -appearance: none;
-  -webkit-appearance: none;
+  appearance: none;
 }
 
 .checkbox-wrapper-31 input[type="checkbox"]:hover {
